@@ -15,6 +15,7 @@ struct foo {
 #define offsetof(TYPE, MEMBER)	((size_t) &((TYPE *) 0)->MEMBER)
 
 struct foo* q = (struct foo *) malloc (offsetof (struct foo, some_more_nothing));
+q->nothing = 1; /* touch q */ 
 /* The RHS of the following expression is meant to trigger a
    fold-const.c mapping the expression to a BIT_FIELD_REF.  It glues
    together the accesses to the two non-neighbouring bitfields into a
